--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description"
+            content="Cindy-Ann Roberts's portfolio showcasing UX-driven front-end solutions and experiences.">
+
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@300;700&display=swap" rel="stylesheet">
@@ -11,24 +14,9 @@
 
         <title>Document</title>
         <link rel="stylesheet" href="style.css">
-
-        <!-- <script src="liveSite.js"></script> -->
-
     </head>
 
     <body>
-        <script>
-            function myFunction() {
-                var checkBox = document.getElementById("myCheck");
-                var text = document.getElementById("navContainer");
-                if (checkBox.checked == true) {
-                    text.style.display = "block";
-                } else {
-                    text.style.display = "none";
-                }
-            }
-        </script>
-
         <main>
             <header>
                 <div>
@@ -51,97 +39,129 @@
                 </div>
             </header>
 
-            <section>
+            <section id="introduction">
                 <h1><span>Hi, I&apos;m Cindy-Ann Roberts.</span><br>
                     I Love Crafting Empathic UX-Driven Front End Solutions</h1>
             </section>
-
             <section id="portfolio">
-                <h2>Portfolio</h2>
+                <h2>Explore My Work</h2>
                 <!-- Your portfolio items go here -->
-
                 <article>
                     <h3>Diabetes Education</h3>
                     <!-- Project details, images, and description go here -->
                     <figure>
-                        <img src="project-image.jpg" alt="Project Image">
+                        <img src="https://placehold.co/600x400" alt="Project Image">
                         <figcaption>Caption describing the project</figcaption>
                     </figure>
                 </article>
-
                 <article>
                     <h3>Luna Fairy</h3>
                     <!-- Project details, images, and description go here -->
                     <figure>
-                        <img src="project-image.jpg" alt="Project Image">
+                        <img src="https://placehold.co/600x400" alt="Project Image">
                         <figcaption>Caption describing the project</figcaption>
                     </figure>
                 </article>
-
                 <article>
                     <h3>Easy bank</h3>
                     <!-- Project details, images, and description go here -->
                     <figure>
-                        <img src="project-image.jpg" alt="Project Image">
+                        <img src="https://placehold.co/600x400" alt="Project Image">
                         <figcaption>Caption describing the project</figcaption>
                     </figure>
                 </article>
-
                 <article>
                     <h3>Venus Group</h3>
                     <!-- Project details, images, and description go here -->
                     <figure>
-                        <img src="project-image.jpg" alt="Project Image">
+                        <img src="https://placehold.co/600x400" alt="Project Image">
                         <figcaption>Caption describing the project</figcaption>
                     </figure>
                 </article>
-
                 <article>
                     <h3>Greenleaf Post Card</h3>
                     <!-- Project details, images, and description go here -->
                     <figure>
-                        <img src="project-image.jpg" alt="Project Image">
+                        <img src="https://placehold.co/600x400" alt="Project Image">
                         <figcaption>Caption describing the project</figcaption>
                     </figure>
                 </article>
-
                 <article>
                     <h3>Pure Protein Case Study</h3>
                     <!-- Project details, images, and description go here -->
                     <figure>
-                        <img src="project-image.jpg" alt="Project Image">
+                        <img src="https://placehold.co/600x400" alt="Project Image">
                         <figcaption>Caption describing the project</figcaption>
                     </figure>
                 </article>
-
-
-
             </section>
-
             <section id="about">
-                <h2>About Me</h2>
-                <!-- Your about me content goes here -->
+                <article>
+                    <img src="https://placehold.co/200x200"
+                        alt="Professional studio portrait of Cindy-Ann Roberts, UX Designer">
+
+                    <h2>Hello Again!</h2>
+                    <!-- Your about me content goes here -->
+                    <p>At my core, I'm shaped by fundamental principles. Unyielding resilience propels me to confront
+                        challenges, turning obstacles into progress. Inspirational mentorship fosters both my personal
+                        and collective growth. My unwavering commitment to continuous learning ensures adaptability and
+                        ongoing development."
+                    </p>
+                </article>
+                <article>
+                    <h2>Crafting Empathy in Code: A Journey from Healthcare to UX Design</h2>
+                    <p>
+                        Embarking on a journey from healthcare to UX design, I initially pursued a nursing degree,
+                        driven
+                        by a dedication to healthcare. However, my curiosity led me to explore the realms of front-end
+                        development and UX design, marking the beginning of my exciting venture into the world of
+                        technology.
+                    </p>
+
+                    <p>
+                        With a diverse background spanning healthcare, UX design, and internet/web development,
+                        I've cultivated a unique skill set. I approach challenges with a fresh and innovative
+                        perspective.
+                    </p>
+
+
+                    <p>
+                        In my pursuit of enhancing health outcomes for high school students through thoughtful design,
+                        I developed a diabetes education web app. Beyond my professional life, my commitment extends
+                        to infusing empathy into every aspect of design. The mission is clear: bridge the gap between
+                        technology and humanity, one considerate design at a time.
+                    </p>
+
+
+                    <p>
+                        As this exciting journey unfolds, my dedication remains unwavering, focusing on making a
+                        difference by prioritizing users’ needs and enriching the human side of technology.
+                    </p>
+
+                </article>
+                <article id="contact">
+                    <div class="intro">
+                        <h2>Let’s Create Impactful Experiences Together!</h2>
+                        <p>Connect with me through the social media links below, or reach out via
+                            <a href="mailto:cindyannroberts1@gmail.com">cindyannroberts1@gmail.com</a>.
+                        </p>
+                    </div>
+                    <div class="contact-form">
+                        <h2>Contact</h2>
+                        <form action="/submit" method="post">
+                            <label for="name">Name:</label>
+                            <input type="text" id="name" name="name" required>
+                            <label for="email">Email:</label>
+                            <input type="email" id="email" name="email" required>
+                            <!-- Other form fields go here -->
+                            <button type="submit">Submit</button>
+                        </form>
+                    </div>
+                </article>
             </section>
 
-            <section id="contact">
-                <h2>Contact</h2>
-                <!-- Your contact form or information goes here -->
-                <form action="/submit" method="post">
-                    <label for="name">Name:</label>
-                    <input type="text" id="name" name="name" required>
-
-                    <label for="email">Email:</label>
-                    <input type="email" id="email" name="email" required>
-
-                    <!-- Other form fields go here -->
-
-                    <button type="submit">Submit</button>
-                </form>
-            </section>
 
         </main>
-
-
 
         <footer>
 
@@ -180,6 +200,17 @@
 
         </footer>
 
+        <script>
+            function myFunction() {
+                var checkBox = document.getElementById("myCheck");
+                var text = document.getElementById("navContainer");
+                if (checkBox.checked == true) {
+                    text.style.display = "block";
+                } else {
+                    text.style.display = "none";
+                }
+            }
+        </script>
     </body>
 
 </html>
