mobile and desktop elements added

--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@300;700&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/e3888dea58.js" crossorigin="anonymous"></script>
-
-        <title>Document</title>
         <link rel="stylesheet" href="style.css">
+        <title>Document</title>
     </head>
 
     <body>
@@ -31,9 +30,9 @@
                     <input type="checkbox" id="myCheck" onclick="myFunction()">
                     <nav id="navContainer">
                         <ul>
-                            <li><a href="#">Portfolio</a></li>
+                            <li><a href="index.html">Portfolio</a></li>
                             <li><a href="about.html">About</a></li>
-                            <li><a href="#">Contact</a></li>
+                            <li><a href="contact.html">Contact</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -43,122 +42,93 @@
                 <h1><span>Hi, I&apos;m Cindy-Ann Roberts.</span><br>
                     I Love Crafting Empathic UX-Driven Front End Solutions</h1>
             </section>
+
             <section id="portfolio">
                 <h2>Explore My Work</h2>
-                <!-- Your portfolio items go here -->
-                <article>
-                    <h3>Diabetes Education</h3>
+
+                <article id="diabetes">
+                    <h3>Case Study: Diabetes Education Website</h3>
                     <!-- Project details, images, and description go here -->
                     <figure>
-                        <img src="https://placehold.co/600x400" alt="Project Image">
-                        <figcaption>Caption describing the project</figcaption>
+                        <img src="image/desktopMockup.jpg" alt="Project Image">
+                        <figcaption>
+                            <p>Exploring the development of a diabetes education website, this case study delves into
+                                addressing critical gaps in awareness about type 2 diabetes. From educating high school
+                                students to dispelling myths and promoting health literacy, discover how this project
+                                contributes to building a healthier and more informed community.</p>
+                        </figcaption>
+                        </figcaption>
                     </figure>
+                    <p>Read the <a class="colorLinks" href="diabetes.html">Diabetes Case Study</a></p>
+
+                    <p>View the <a class="colorLinks" href="https://cindyannroberts.github.io/Diabetes-Edu/"
+                            target="_blank">Diabetes
+                            Education Website on GitHub</a></p>
                 </article>
-                <article>
+
+                <article id="fairyBook">
                     <h3>Luna Fairy</h3>
                     <!-- Project details, images, and description go here -->
                     <figure>
-                        <img src="https://placehold.co/600x400" alt="Project Image">
-                        <figcaption>Caption describing the project</figcaption>
+                        <img src="image/LunaFairy.jpg" alt="Project Image">
+                        <figcaption>
+                            <p>Explore the enchanting journey of creating the "Luna Fairy" book cover, where imaginative
+                                design meets captivating techniques like blend modes, masking, compositing, and
+                                retouching. Delve into the creative process, challenges, and the harmonious fusion of
+                                artistry and storytelling that brings the magical world of Luna Fairies to life.</p>
+                        </figcaption>
                     </figure>
+
+                    <p>Read the <a class="colorLinks" href="lunaFairy.html">Luna Fairy Case Study</a></p>
                 </article>
-                <article>
+
+                <article id="easyBank">
                     <h3>Easy bank</h3>
+                    <a href="https://cindyannroberts.github.io/easybank/"></a>
                     <!-- Project details, images, and description go here -->
                     <figure>
-                        <img src="https://placehold.co/600x400" alt="Project Image">
-                        <figcaption>Caption describing the project</figcaption>
+                        <img src="image/easyBankScreenshot.png" alt="Project Image">
+                        <figcaption>
+                            <p>I turned a Figma design into a website, making sure it looks and works just like the
+                                original. I used HTML for the structure and CSS for the design, creating a responsive
+                                and interactive web page.</p>
+                        </figcaption>
                     </figure>
+                    <a class="colorLinks" href="https://cindyannroberts.github.io/easybank/" target="_blank">View the
+                        code on
+                        GitHub</a>
+
+
                 </article>
-                <article>
-                    <h3>Venus Group</h3>
+
+                <article id="nikeAd">
+                    <h3>Case Study: Nike Sneaker AD - Be Explosive</h3>
                     <!-- Project details, images, and description go here -->
+
                     <figure>
-                        <img src="https://placehold.co/600x400" alt="Project Image">
-                        <figcaption>Caption describing the project</figcaption>
+                        <img src="image/largeDisplayADMockup.jpg" alt="Project Image">
+                        <figcaption>Step into a world of explosive style with Nike Sneakers – where bold design meets
+                            unrivaled performance. Unleash your potential and be explosive with every step. Discover the
+                            essence of greatness in every stride. </figcaption>
                     </figure>
+                    <p>Read the <a class="colorLinks" href="nikeAd.html">Nike Sneaker AD - Be Explosive Case Study</a>
+                    </p>
+
                 </article>
-                <article>
-                    <h3>Greenleaf Post Card</h3>
-                    <!-- Project details, images, and description go here -->
-                    <figure>
-                        <img src="https://placehold.co/600x400" alt="Project Image">
-                        <figcaption>Caption describing the project</figcaption>
-                    </figure>
+
+                <article id="printDesign">
+
+                    <h3>Greenleaf Cafe</h3>
+                    <img src="image/greenLeafCafe.jpg" alt="Print Design Project 2">
+                    <p>Description here.</p>
+
+                    <!-- Add more articles for additional print design projects -->
                 </article>
-                <article>
-                    <h3>Pure Protein Case Study</h3>
-                    <!-- Project details, images, and description go here -->
-                    <figure>
-                        <img src="https://placehold.co/600x400" alt="Project Image">
-                        <figcaption>Caption describing the project</figcaption>
-                    </figure>
-                </article>
+
             </section>
-            <section id="about">
-                <article>
-                    <img src="https://placehold.co/200x200"
-                        alt="Professional studio portrait of Cindy-Ann Roberts, UX Designer">
-
-                    <h2>Hello Again!</h2>
-                    <!-- Your about me content goes here -->
-                    <p>At my core, I'm shaped by fundamental principles. Unyielding resilience propels me to confront
-                        challenges, turning obstacles into progress. Inspirational mentorship fosters both my personal
-                        and collective growth. My unwavering commitment to continuous learning ensures adaptability and
-                        ongoing development."
-                    </p>
-                </article>
-                <article>
-                    <h2>Crafting Empathy in Code: A Journey from Healthcare to UX Design</h2>
-                    <p>
-                        Embarking on a journey from healthcare to UX design, I initially pursued a nursing degree,
-                        driven
-                        by a dedication to healthcare. However, my curiosity led me to explore the realms of front-end
-                        development and UX design, marking the beginning of my exciting venture into the world of
-                        technology.
-                    </p>
-
-                    <p>
-                        With a diverse background spanning healthcare, UX design, and internet/web development,
-                        I've cultivated a unique skill set. I approach challenges with a fresh and innovative
-                        perspective.
-                    </p>
 
 
-                    <p>
-                        In my pursuit of enhancing health outcomes for high school students through thoughtful design,
-                        I developed a diabetes education web app. Beyond my professional life, my commitment extends
-                        to infusing empathy into every aspect of design. The mission is clear: bridge the gap between
-                        technology and humanity, one considerate design at a time.
-                    </p>
 
-
-                    <p>
-                        As this exciting journey unfolds, my dedication remains unwavering, focusing on making a
-                        difference by prioritizing users’ needs and enriching the human side of technology.
-                    </p>
-
-                </article>
-                <article id="contact">
-                    <div class="intro">
-                        <h2>Let’s Create Impactful Experiences Together!</h2>
-                        <p>Connect with me through the social media links below, or reach out via
-                            <a href="mailto:cindyannroberts1@gmail.com">cindyannroberts1@gmail.com</a>.
-                        </p>
-                    </div>
-                    <div class="contact-form">
-                        <h2>Contact</h2>
-                        <form action="/submit" method="post">
-                            <label for="name">Name:</label>
-                            <input type="text" id="name" name="name" required>
-                            <label for="email">Email:</label>
-                            <input type="email" id="email" name="email" required>
-                            <!-- Other form fields go here -->
-                            <button type="submit">Submit</button>
-                        </form>
-                    </div>
-                </article>
-            </section>
 
 
         </main>
