push footer at the bottom of page

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <h2>Explore My Work</h2>
 
                 <article id="diabetes">
-                    <h3>Case Study: Diabetes Education Website</h3>
+                    <h3>Diabetes Education</h3>
                     <!-- Project details, images, and description go here -->
                     <figure>
                         <img src="image/desktopMockup.jpg" alt="Project Image">
