--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
                     <input type="checkbox" id="myCheck" onclick="myFunction()">
                     <nav id="navContainer">
                         <ul>
-                            <li><a href="#portfolio">Portfolio</a></li>
+                            <li><a href="index.html">Portfolio</a></li>
                             <li><a href="about.html">About</a></li>
                             <li><a href="contact.html">Contact</a></li>
                         </ul>
@@ -44,7 +44,7 @@
                     <img src="image/RobertsProfile-Small01.jpg"
                         alt="Professional studio portrait of Cindy-Ann Roberts, UX Designer and Front End Developer">
                 </div>
-                <h1>Crafting a Unique Journey: From Healthcare to UX Design</h1>
+                <h1><span>Crafting a Unique Journey:</span> From Healthcare to UX Design</h1>
 
                 <p>Hello again! I'm a passionate UX Designer and Front End Developer on a
                     transformative journey from healthcare to the dynamic world of user experience. My background in
