Add Greenleaf project description

--- a/greenLeaf.html
+++ b/greenLeaf.html
@@ -12,7 +12,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@300;700&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/e3888dea58.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="style.css">
-        <title>Case Study Luna Fairy</title>
+        <title>Greenleaf Cafe Promotional Poster Card Project</title>
     </head>
 
     <body>
@@ -37,53 +37,64 @@
                     </nav>
                 </div>
             </header>
-            <article id="lunaFairy">
-                <h1>Luna Fairy - Book Cover Case Study</h1>
 
-                <section>
-                    <img src="image/LunaFairyMockup.jpg" alt="">
-                    <h2>Description</h2>
-                    <p>In the realm of imagination and storytelling, I embarked on the creative journey of designing a
-                        captivating fiction book cover for a "Luna Fairy." A good book cover should be an irresistible
-                        gateway
-                        to the world of fiction, invoking curiosity, fantasy, and the desire to escape into the unknown.
-                    </p>
+            <article id="greenLeaf">
 
-                </section>
-                <section>
-                    <h2>Inspiration</h2>
-                    <img src="image/lunaFairyInspiration.png" alt="">
-                </section>
+                <h1>Project Description: Greenleaf Cafe Promotional Poster Card</h1>
+                <img src="image/greenLeafCafe.jpg" alt="">
 
-                <section>
-                    <h2>Techniques Employed</h2>
-                    <p>
-                        In designing, I used diverse techniques, adjusting blend modes like screen blend on the moon for
-                        harmony. With a 10-brush size, I separated the main subject for seamless blending. Combining
-                        elements like the moon, skyline, fairy, and a skyline crafted the scene. To add depth, I
-                        duplicated the moon and added a blur. Final refinements involved modifying brightness and
-                        contrast with a layer mask for overall balance.
-                    </p>
-                </section>
+                <h2>Overview:</h2>
+                <p>The personal project for the Greenleaf Cafe Promotional Poster Card is dedicated to crafting a
+                    visually appealing and welcoming design. Its purpose is to highlight a special offer for cafe
+                    guests, with a key emphasis on motivating customers to enjoy a 10% discount on their purchases
+                    through an exclusive promotional card.</p>
 
-                <section>
-                    <h2>Creative Process</h2>
-                    <p>The journey began with the selection of images that would seamlessly blend together to create the
-                        perfect scene for "Luna Fairies." The moon, skyline, fairy, and a captivating landscape were
-                        chosen meticulously, ensuring they fit harmoniously within the narrative. The facial expression
-                        of the magical character was chosen to match the mood of the story, and the images were selected
-                        for their vibrant and colorful qualities.</p>
-                    <img src="image/lunaFairyProcess.png" alt="">
-                </section>
+                <h2>Key Objectives:</h2>
+                <ul>
+                    <li><strong>Attract Attention:</strong> The poster card design will employ vibrant colors, appealing
+                        graphics, and engaging typography to capture the attention of potential customers.</li>
+                    <li><strong>Convey Savings:</strong> Clear and concise messaging will communicate the 10% savings,
+                        ensuring that guests instantly understand the value of the promotional card.</li>
+                    <li><strong>Highlight Greenleaf Cafe Branding:</strong> The design will align with the established
+                        Greenleaf Cafe branding, incorporating the logo, color scheme, and any relevant brand elements.
+                    </li>
+                    <li><strong>Promote Exclusivity:</strong> The promotional card will convey a sense of exclusivity,
+                        making guests feel special and encouraging them to take advantage of the limited-time offer.
+                    </li>
+                    <li><strong>Drive Foot Traffic:</strong> The overall goal is to increase foot traffic to the
+                        Greenleaf Cafe by motivating customers to visit and enjoy the savings offered through the
+                        promotional card.</li>
+                </ul>
 
-                <section>
-                    <h2>Challenges</h2>
-                    <p>Selecting images for a book cover without a predefined story was daunting. However,inspiration
-                        struck with the discovery of skyline and moon images. Finding the right title was a
-                        puzzle, but "Luna Fairies" resulted from an inspired decision, combining moon and fairy elements
-                        into a captivating name for the book.</p>
-                </section>
+                <h2>Design Elements:</h2>
+                <ul>
+                    <li><strong>Colors:</strong> Utilize the Greenleaf Cafe's brand colors to maintain consistency and
+                        reinforce brand identity.</li>
+                    <li><strong>Imagery:</strong> Incorporate visually appealing images of the cafe's menu items or
+                        ambiance to evoke a desire to visit.</li>
+                    <li><strong>Typography:</strong> Use clear and readable fonts for the promotional message, ensuring
+                        that customers can quickly grasp the offer details.</li>
+                    <li><strong>Call to Action:</strong> Include a compelling call to action, encouraging customers to
+                        visit the cafe and redeem their 10% savings.</li>
+                </ul>
+
+                <h2>Distribution:</h2>
+                <p>The promotional poster cards will be strategically placed within the cafe premises, at the entrance,
+                    near the counter, and on tables. Additionally, they may be distributed in nearby businesses or
+                    mailed to local residents to extend the reach of the promotion.</p>
+
+                <h2>Measurable Success:</h2>
+                <p>The success of this project will be measured by an increase in customer engagement, foot traffic, and
+                    the redemption rate of the promotional cards. Regular monitoring and feedback collection will
+                    provide valuable insights for future promotional campaigns.</p>
+
+                <p>By combining visually appealing design with a tempting offer, the Greenleaf Cafe Promotional Poster
+                    Card aims to create a positive and inviting experience for customers, ultimately contributing to
+                    increased sales and customer loyalty.</p>
+                <p>
             </article>
+
+
 
         </main>
 
