--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                                 students to dispelling myths and promoting health literacy, discover how this project
                                 contributes to building a healthier and more informed community.</p>
                         </figcaption>
-                        </figcaption>
+
                     </figure>
                     <p>Read the <a class="colorLinks" href="diabetes.html">Diabetes Case Study</a></p>
 
@@ -118,11 +118,14 @@
 
                 <article id="printDesign">
 
-                    <h3>Greenleaf Cafe</h3>
+                    <h3>Greenleaf Cafe Promotional Poster Card</h3>
                     <img src="image/greenLeafCafe.jpg" alt="Print Design Project 2">
-                    <p>Description here.</p>
+                    <p>The Greenleaf Cafe Promotional Poster Card project aims to create an eye-catching and inviting
+                        design to promote a special offer for cafe guests. The focus is on encouraging customers to save
+                        10% on their purchases through an exclusive promotional card.</p>
 
                     <!-- Add more articles for additional print design projects -->
+                    <a class="colorLinks" href="greenLeaf.html">Read more about the project</a></p>
                 </article>
 
             </section>
