--- a/nikeAd.html
+++ b/nikeAd.html
@@ -31,8 +31,8 @@
                     <nav id="navContainer">
                         <ul>
                             <li><a href="index.html">Portfolio</a></li>
-                            <li><a href="#about">About</a></li>
-                            <li><a href="#contact">Contact</a></li>
+                            <li><a href="about.html">About</a></li>
+                            <li><a href="contact.html">Contact</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -54,7 +54,7 @@
                     <h2>Inspiration</h2>
                     <p>I sought inspiration from Nike’s advertising, mirroring their incorporation of vibrant colors,
                         special effects, and distortion to convey a sense of movement and emotion. </p>
-                    <img src="image/nike inspiration.png" alt="">
+                    <img src="image/nikeInspiration.png" alt="">
 
                 </section>
                 <section>
@@ -68,7 +68,7 @@
                 <div id="imagesCombined">
                     <img src="image/fire.jpg" alt="">
                     <img src="image/redNikeSneakers.jpg" alt="">
-                    <img src="image/fire and sneaker.png" alt="">
+                    <img src="image/fireAndSneaker.png" alt="">
                     <img src="image/beExplosive.jpg" alt="">
                 </div>
 
