Change portfolio grid to three rows two columns

--- a/worldTravel.html
+++ b/worldTravel.html
@@ -12,7 +12,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@300;700&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/e3888dea58.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="style.css">
-        <title>Document</title>
+        <title>World Travel - Unique Destination Experiences</title>
     </head>
 
     <body>
@@ -38,112 +38,40 @@
                 </div>
             </header>
 
-            <section id="introduction">
-                <h1><span>Hi, I&apos;m Cindy-Ann Roberts.</span><br>
-                    I Love Crafting Empathic UX-Driven Front End Solutions</h1>
-            </section>
+            <article id="travelPage">
+                <h1>World Travel.com - Unique Destination Experiences </h1>
 
-            <section id="portfolio">
-                <h2>Explore My Work</h2>
-
-                <article id="diabetes">
-                    <h3>Diabetes Education</h3>
-                    <!-- Project details, images, and description go here -->
-                    <figure>
-                        <img src="image/desktopMockup.jpg" alt="Project Image">
-                        <figcaption>
-                            <p>Exploring the development of a diabetes education website, this case study delves into
-                                addressing critical gaps in awareness about type 2 diabetes. From educating high school
-                                students to dispelling myths and promoting health literacy, discover how this project
-                                contributes to building a healthier and more informed community.</p>
-                        </figcaption>
-
-                    </figure>
-                    <p>Read the <a class="colorLinks" href="diabetes.html">Diabetes Case Study</a></p>
-
-                    <p>View the <a class="colorLinks" href="https://cindyannroberts.github.io/Diabetes-Edu/"
-                            target="_blank">Diabetes
-                            Education Website on GitHub</a></p>
-                </article>
-
-                <article id="easyBank">
-                    <h3>Easy bank</h3>
-                    <a href="https://cindyannroberts.github.io/easybank/"></a>
-                    <!-- Project details, images, and description go here -->
-                    <figure>
-                        <img src="image/easyBankScreenshot.png" alt="Project Image">
-                        <figcaption>
-                            <p>I turned a Figma design into a website, making sure it looks and works just like the
-                                original. I used HTML for the structure and CSS for the design, creating a
-                                responsive
-                                and interactive web page.</p>
-                        </figcaption>
-                    </figure>
-                    <a class="colorLinks" href="https://cindyannroberts.github.io/easybank/" target="_blank">View
-                        the code on Github
-                    </a>
-                </article>
-
-
-
-                <article id="fairyBook">
-                    <h3>Luna Fairy</h3>
-                    <!-- Project details, images, and description go here -->
-                    <figure>
-                        <img src="image/croppedFairy.png" alt="Project Image">
-                        <figcaption>
-                            <p>Explore the enchanting journey of creating the "Luna Fairy" book cover, where
-                                imaginative
-                                design meets captivating techniques like blend modes, masking, compositing, and
-                                retouching. Delve into the creative process, challenges, and the harmonious fusion
-                                of
-                                artistry and storytelling that brings the magical world of Luna Fairies to life.</p>
-                        </figcaption>
-                    </figure>
-
-                    <p>Read the <a class="colorLinks" href="lunaFairy.html">Luna Fairy Case Study</a></p>
-                </article>
-
-                <article id="nikeAd">
-                    <h3>Case Study: Nike Sneaker AD - Be Explosive</h3>
-                    <!-- Project details, images, and description go here -->
-
-                    <figure>
-                        <img src="image/largeDisplayADMockup.jpg" alt="Project Image">
-                        <figcaption>Step into a world of explosive style with Nike Sneakers – where bold design
-                            meets
-                            unrivaled performance. Unleash your potential and be explosive with every step. Discover
-                            the
-                            essence of greatness in every stride. </figcaption>
-                    </figure>
-                    <p>Read the <a class="colorLinks" href="nikeAd.html">Nike Sneaker AD - Be Explosive Case
-                            Study</a>
+                <section>
+                    <img src="image/worldTravelBillboard.jpg" alt="">
+                    <h2>Objective</h2>
+                    <p>To develop a compelling and engaging marketing campaign that highlights World Travel.com as the
+                        go-to platform for unique destination experiences. The campaign should emphasize the company's
+                        ability to craft customized plans for dream vacations on both land and sea.
                     </p>
 
-                </article>
+                </section>
 
-                <article id="Greenleaf">
-                    <h3>Greenleaf Cafe Promotional Poster Card</h3>
-                    <img src="image/greenLeafCafe.jpg" alt="Print Design Project 2">
-                    <p>The Greenleaf Cafe Promotional Poster Card project aims to create an eye-catching and
-                        inviting
-                        design to promote a special offer for cafe guests. The focus is on encouraging customers to
-                        save
-                        10% on their purchases through an exclusive promotional card.
+                <section>
+                    <h2>Target Audience</h2>
+                    <p>Adventure-seeking individuals, travel enthusiasts, and those looking for personalized and
+                        unforgettable travel experiences.
                     </p>
 
-                    <a class="colorLinks" href="greenLeaf.html">Read more about the project</a>
-                </article>
+                </section>
+                <section>
+                    <h2>Key Message</h2>
+                    <p>"See the world from a different point of view with World Travel.com. We specialize in creating
+                        unique destination experiences, offering customized plans for dream vacations on land and sea.
+                        Your journey begins with us."
 
-                <article id="travel">
-                    <h3>World Travel</h3>
-                    <img src="image/WorldTravel.jpg" alt="">
-                    <p>Turn your dream vacation into reality. Visit World Travel.com to explore our unique destination
-                        experiences and start planning your customized getaway today</p>
-                    <a class="colorLinks" href="worldTravel.html">Read more about the project</a>
-                </article>
-            </section>
 
+                    </p>
+
+                </section>
+
+
+
+            </article>
 
         </main>
 
